# bye-buy

./: DEVPOST.md  IMPLEMENTATION.md  pitch-deck.html
backend/: .gitignore  auth_login.py  auth_session.py  pyproject.toml  setup_facebook_login.py
backend/database/: connection.py  schema.sql  seed.py
backend/database/models/: listing.py
backend/messaging/: config.py  main.py
backend/messaging/ai/: client.py  context.py  prompts.py  responder.py
backend/messaging/api/: conversations.py  payments.py  polling.py  router.py  stats.py
backend/messaging/browser/: actions.py  auth.py  client.py  extractor.py  monitor.py
backend/messaging/models/: __init__.py  browser_session.py  buyer.py  conversation.py  message.py  response_config.py  transaction.py
backend/messaging/schemas/: __init__.py  conversation.py  message.py  payment.py  polling.py
backend/messaging/services/: __init__.py  buyer_service.py  conversation_service.py  matching_service.py  payment_service.py  payment_worker.py
backend/posting/: __init__.py  config.py  main.py
backend/posting/api/: jobs.py  listings.py  router.py
backend/posting/database/: connection.py  schema.sql
backend/posting/models/: __init__.py  image.py  job.py  listing.py
backend/posting/queue/: job_processor.py  worker.py
backend/posting/schemas/: __init__.py  job.py  listing.py
backend/posting/storage/: images.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/lib/: api.ts  types.ts
(+18 files in other folders)
