[project]
name = "backend"
version = "0.1.0"
description = "Bye-Buy multi-platform listing automation service"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.129.0",
    "uvicorn>=0.40.0",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.19",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0",
    "aiofiles>=23.0",
    "pillow>=10.0",
    "pydantic-settings>=2.0",
    "stagehand>=0.3.10",
    "browserbase>=0.3.0",
    "greenlet>=3.0",
]
