[project]
name = "backend"
version = "0.1.0"
description = "Bye-Buy multi-platform listing automation service"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.129.0",
    "uvicorn>=0.40.0",
    "stagehand>=3.5.0",
    "openai>=1.60.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.0",
    "pillow>=10.0",
    "browserbase>=0.3.0",
    "greenlet>=3.0",
]
